--- a/aula1/introdução-e-instalação.html
+++ b/aula1/introdução-e-instalação.html
@@ -227,22 +227,12 @@ e la terá varias formas de instalção, vite e etc, oque iremos usar instalar a
 
 </head>
 <body class="bg-grey-100">
-    <h1 class="text-sm text-red-500">
-    Hello world!
-    </h1>
-    <h1 class="text-base text-yellow-800">
-    Hello world!
-    </h1>
-    <h1 class="text-lg text-green-200">
-    Hello world!
-    </h1>
-    <h1 class="text-xl text-green-600">
-    Hello world!
-    </h1>
-    <h1 class="text-2x1 text-blue-900">
-    Hello world!
-    </h1>
-    
-    <p class="text-center text-grey-500 font-weight-700"> texto</p>
+   <div class="m-5 p-5 border-4 border-yellow-900">
+    Lorem ipsum dolor sit amet consectetur adipisicing
+     elit. Inventore quaerat totam neque labore 
+     quos a. Ea, ipsam mollitia? Sint asperiores 
+     modi est voluptas aliquid, vitae assumenda 
+     nostrum consequuntur numquam omnis.
+   </div>
 </body>
 </html>
