--- a/aula2/introdução-e-instalação.html
+++ b/aula2/introdução-e-instalação.html
@@ -320,21 +320,12 @@ background, as cores de la servem pra tudo.
 
 </head>
 <body class="bg-grey-100">
-    <h1 class="text-sm">
-    Hello world!
-    </h1>
-    <h1 class="text-base">
-    Hello world!
-    </h1>
-    <h1 class="text-lg">
-    Hello world!
-    </h1>
-    <h1 class="text-xl">
-    Hello world!
-    </h1>
-    <h1 class="text-2x1">
-    Hello world!
-    </h1>
-    
+   <div class="m-5 p-5 border-4 border-yellow-900">
+    Lorem ipsum dolor sit amet consectetur adipisicing
+     elit. Inventore quaerat totam neque labore 
+     quos a. Ea, ipsam mollitia? Sint asperiores 
+     modi est voluptas aliquid, vitae assumenda 
+     nostrum consequuntur numquam omnis.
+   </div>
 </body>
 </html>
