--- a/aula5/background.html
+++ b/aula5/background.html
@@ -4,6 +4,347 @@ Nessa aula iremos abordar sobre background.
 
 
 
+Background no Tailwind CSS:
+
+No Tailwind, a propriedade background-color é controlada com classes utilitárias que começam com bg-.
+Elas permitem definir cores herdadas, transparentes, ou então cores específicas da paleta do Tailwind (com diferentes intensidades).
+seu prefixo é bg-  e o nome da cor e força de sua tonalidade. 
+
+
+
+Classes especiais:
+. bg-inherit → background-color: inherit;
+Usa a cor de fundo herdada do elemento pai.
+. bg-current → background-color: currentColor;
+Faz o fundo adotar o valor da propriedade color (a cor do texto do elemento).
+. bg-transparent → background-color: transparent;
+Define o fundo como transparente.
+. bg-black → background-color: var(--color-black); → #000
+. bg-white → background-color: var(--color-white); → #fff
+
+
+
+Escalas de cor no Tailwind:
+Cada cor no Tailwind é dividida em escala de intensidade, indo do 50 (mais claro) até 950 (mais escuro).
+
+Exemplo: Cor Vermelha (bg-red-...)
+
+bg-red-50 → cor mais clara (oklch(97.1% 0.013 17.38))
+. bg-red-100 → um pouco mais forte
+. bg-red-200 → tom suave
+. bg-red-300 → intermediário
+. bg-red-400 → mais intenso
+. bg-red-500 → tom padrão vermelho
+. bg-red-600 → vermelho escuro
+. bg-red-700 → ainda mais escuro
+. bg-red-800 → quase bordô
+. bg-red-900 → vermelho bem profundo
+. bg-red-950 → vermelho quase preto
+
+
+
+Exemplo: Cor Laranja (bg-orange-...):
+. bg-orange-50 → bem clarinho
+. bg-orange-100 → suave
+. bg-orange-200 → tom pastel
+. bg-orange-300 → laranja médio
+. bg-orange-400 → laranja vibrante
+. bg-orange-500 → tom padrão
+. bg-orange-600 → laranja mais queimado
+. bg-orange-700 → escurecendo
+. bg-orange-800 → forte e profundo
+. bg-orange-900 → quase marrom
+. bg-orange-950 → laranja super escuro
+
+
+
+
+
+
+
+
+Background Position no Tailwind CSS:
+A propriedade background-position define a posição inicial da imagem de fundo (background-image) em um elemento.
+No Tailwind, usamos classes utilitárias que começam com bg- para controlar a posição do background.
+
+
+Classes pré-definidas:
+
+Essas classes já vêm prontas no Tailwind para alinhar a imagem em diferentes pontos do container:
+. bg-top-left → background-position: top left;
+Posiciona a imagem no canto superior esquerdo.
+. bg-top → background-position: top;
+Centraliza a imagem no topo.
+. bg-top-right → background-position: top right;
+Posiciona no canto superior direito.
+. bg-left → background-position: left;
+Centraliza a imagem no lado esquerdo.
+. bg-center → background-position: center;
+Centraliza a imagem no elemento.
+. bg-right → background-position: right;
+Centraliza a imagem no lado direito.
+. bg-bottom-left → background-position: bottom left;
+Posiciona no canto inferior esquerdo.
+. bg-bottom → background-position: bottom;
+Centraliza a imagem no rodapé do elemento.
+. bg-bottom-right → background-position: bottom right;
+Posiciona no canto inferior direito.
+
+
+
+
+Classes customizadas:
+Quando precisar de mais controle além das opções pré-definidas, o Tailwind permite definir posições personalizadas:
+
+. bg-position-(<custom-property>)
+Usa uma CSS Custom Property (variável) como valor.
+
+background-position: var(--my-position);
+
+. bg-position-[<value>]
+Define um valor manual.
+Exemplo:
+
+<div class="bg-position-[20px_50%]"></div>
+
+background-position: 20px 50%;
+
+
+👉 Resumindo:
+. Use as classes pré-definidas (bg-top, bg-center, bg-bottom-right, etc.) para os posicionamentos mais comuns.
+. Use as classes customizadas (bg-position-[...]) quando precisar de precisão extra com unidades como px, % ou variáveis CSS.
+
+
+
+
+
+Background Repeat no Tailwind CSS:
+A propriedade background-repeat controla como uma imagem de fundo (background-image) se repete dentro do elemento.
+
+No Tailwind, usamos classes utilitárias que começam com bg-repeat para configurar essa repetição.
+
+
+Classes pré-definidas:
+. bg-repeat → background-repeat: repeat;
+Repete a imagem de fundo nos dois eixos (horizontal e vertical).
+
+. bg-repeat-x → background-repeat: repeat-x;
+Repete a imagem apenas no eixo horizontal.
+
+. bg-repeat-y → background-repeat: repeat-y;
+Repete a imagem apenas no eixo vertical.
+
+. bg-repeat-space → background-repeat: space;
+Repete a imagem, mas distribui os espaços uniformemente entre as repetições.
+
+. bg-repeat-round → background-repeat: round;
+Ajusta automaticamente o tamanho da imagem para que caiba um número inteiro de repetições.
+
+. bg-no-repeat → background-repeat: no-repeat;
+Impede qualquer repetição da imagem (a imagem aparece apenas uma vez).
+
+
+Exemplo prático:
+<div class="bg-[url('/img/pattern.png')] bg-repeat"></div>
+<div class="bg-[url('/img/pattern.png')] bg-no-repeat bg-center"></div>
+<div class="bg-[url('/img/pattern.png')] bg-repeat-x"></div>
+
+
+👉 Resumindo:
+. bg-repeat, bg-repeat-x, bg-repeat-y → controlam repetição nos eixos.
+. bg-space, bg-round → controlam como a repetição é distribuída.
+. bg-no-repeat → exibe a imagem apenas uma vez.
+
+
+
+
+Background Size no Tailwind CSS
+
+A propriedade background-size define como a imagem de fundo será ajustada dentro do elemento.
+
+No Tailwind, usamos classes utilitárias que começam com bg- para configurar o tamanho do background.
+
+Classes pré-definidas
+
+bg-auto → background-size: auto;
+Mantém o tamanho original da imagem, sem redimensionamento.
+
+bg-cover → background-size: cover;
+A imagem cobre todo o elemento, mantendo a proporção.
+⚠️ Pode cortar partes da imagem se ela não couber exatamente.
+
+bg-contain → background-size: contain;
+A imagem é redimensionada para caber completamente dentro do elemento.
+⚠️ Pode deixar espaços vazios (barras) se a proporção não for a mesma.
+
+Classes personalizadas
+
+bg-size-(<custom-property>) → background-size: var(<custom-property>);
+Permite usar uma variável CSS como valor.
+
+bg-size-[<value>] → background-size: <value>;
+Permite definir manualmente qualquer valor, como 100px 200px ou 50%.
+
+Exemplo prático
+<div class="bg-[url('/img/wallpaper.jpg')] bg-cover"></div>
+<div class="bg-[url('/img/wallpaper.jpg')] bg-contain"></div>
+<div class="bg-[url('/img/pattern.png')] bg-auto"></div>
+<div class="bg-[url('/img/pattern.png')] bg-size-[150px_100px]"></div>
+
+
+👉 Resumindo:
+. bg-auto → mantém o tamanho original.
+. bg-cover → cobre todo o container (pode cortar).
+. bg-contain → encaixa dentro do container (pode sobrar espaço).
+. bg-size-[valor] → controle total (customizado).
+
+
+
+
+
+
+
+
+
+Background Size no Tailwind CSS:
+A propriedade background-size define como a imagem de fundo será ajustada dentro do elemento.
+
+No Tailwind, usamos classes utilitárias que começam com bg- para configurar o tamanho do background.
+
+
+Classes pré-definidas:
+. bg-auto → background-size: auto;
+Mantém o tamanho original da imagem, sem redimensionamento.
+. bg-cover → background-size: cover;
+A imagem cobre todo o elemento, mantendo a proporção.
+⚠️ Pode cortar partes da imagem se ela não couber exatamente.
+. bg-contain → background-size: contain;
+A imagem é redimensionada para caber completamente dentro do elemento.
+⚠️ Pode deixar espaços vazios (barras) se a proporção não for a mesma.
+
+
+
+
+Classes personalizadas:
+. bg-size-(<custom-property>) → background-size: var(<custom-property>);
+Permite usar uma variável CSS como valor.
+. bg-size-[<value>] → background-size: <value>;
+Permite definir manualmente qualquer valor, como 100px 200px ou 50%.
+
+
+Exemplo prático
+<div class="bg-[url('/img/wallpaper.jpg')] bg-cover"></div>
+<div class="bg-[url('/img/wallpaper.jpg')] bg-contain"></div>
+<div class="bg-[url('/img/pattern.png')] bg-auto"></div>
+<div class="bg-[url('/img/pattern.png')] bg-size-[150px_100px]"></div>
+
+
+👉 Resumindo:
+. bg-auto → mantém o tamanho original.
+. bg-cover → cobre todo o container (pode cortar).
+. bg-contain → encaixa dentro do container (pode sobrar espaço).
+. bg-size-[valor] → controle total (customizado).
+
+
+
+
+
+
+
+
+
+Background Image no Tailwind CSS
+
+A propriedade background-image define a imagem ou gradiente de fundo de um elemento.
+No Tailwind, usamos bg- para aplicar tanto imagens quanto gradientes.
+
+
+Classes básicas:
+. bg-none → background-image: none;
+Remove qualquer imagem de fundo.
+. bg-[<value>] → background-image: <value>;
+Aceita URLs diretas ou valores customizados.
+
+<div class="bg-[url('/img/pattern.png')]"></div>
+
+. bg-(image:<custom-property>) → background-image: var(<custom-property>);
+Usa uma variável CSS como imagem de fundo.
+
+
+
+Gradientes lineares:
+O Tailwind simplifica o uso de linear-gradient:
+. bg-linear-to-t → linear-gradient(to top, …)
+. bg-linear-to-tr → linear-gradient(to top right, …)
+. bg-linear-to-r → linear-gradient(to right, …)
+. bg-linear-to-br → linear-gradient(to bottom right, …)
+. bg-linear-to-b → linear-gradient(to bottom, …)
+. bg-linear-to-bl → linear-gradient(to bottom left, …)
+. bg-linear-to-l → linear-gradient(to left, …)
+. bg-linear-to-tl → linear-gradient(to top left, …)
+
+
+➡️ Também dá pra usar ângulos:
+. bg-linear-45 → linear-gradient(45deg in oklab, …)
+. -bg-linear-45 → linear-gradient(-45deg in oklab, …)
+
+
+E valores customizados:
+. bg-linear-[<value>] → linear-gradient(var(--tw-gradient-stops, <value>))
+
+
+Gradiente radial:
+. bg-radial → radial-gradient(in oklab, …)
+. bg-radial-[circle_at_center] → radial-gradient(var(--tw-gradient-stops, circle at center))
+
+
+
+Gradiente cônico:
+. bg-conic-90 → conic-gradient(from 90deg in oklab, …)
+. -bg-conic-90 → conic-gradient(from -90deg in oklab, …)
+. bg-conic-[from_45deg_at_50%_50%] → valor customizado.
+
+
+
+Controlando as cores do gradiente:
+Além do bg-..., usamos modificadores:
+
+. from-<color> → define a cor inicial.
+Exemplo: from-red-500 → começa em vermelho.
+. via-<color> → define a cor intermediária.
+Exemplo: via-purple-500 → passa pelo roxo.
+. to-<color> → define a cor final.
+Exemplo: to-blue-500 → termina no azul.
+
+Também aceitam percentuais, variáveis ou valores livres:
+. from-[20%], via-[50%], to-[80%]
+. from-(--color-primary)
+
+Exemplos práticos
+ Imagem de fundo 
+<div class="bg-[url('/img/wallpaper.jpg')] bg-cover"></div>
+
+Gradiente linear simples
+<div class="bg-linear-to-r from-red-500 to-blue-500"></div>
+
+Gradiente com cor intermediária 
+<div class="bg-linear-to-tr from-pink-500 via-purple-500 to-indigo-500"></div>
+
+ Gradiente radial 
+<div class="bg-radial from-green-400 to-blue-600"></div>
+
+ Gradiente cônico 
+<div class="bg-conic-90 from-yellow-400 via-red-500 to-pink-500"></div>
+
+
+👉 Resumindo:
+. bg-[url(...)] → imagem personalizada.
+. bg-none → remove imagem de fundo.
+. bg-linear-to-* → gradiente linear.
+. bg-radial → gradiente radial.
+. bg-conic-* → gradiente cônico.
+. from- via- to- → controlam as cores e posições do gradiente.
+
 
 
 -->
