--- a/aula18/componente-dropdown.html
+++ b/aula18/componente-dropdown.html
@@ -263,18 +263,17 @@ Aqui o dropdown abre e fecha clicando no botão, sem precisar de React.
 
 
 ✅ Esse já funciona em qualquer projeto HTML.
+. Tem 6 links.
+. Usa ícones Heroicons.
+. Fecha quando clica fora.
 
-Tem 6 links.
 
-Usa ícones Heroicons.
 
-Fecha quando clica fora.
 
-🔹 Versão 2 – React (com Heroicons instalados via npm)
+🔹 Versão 2 – React (com Heroicons instalados via npm):
 
 Caso prefira em React, instale:
-
-npm install @heroicons/react
+| npm install @heroicons/react |
 
 
 E o código ficaria assim:
@@ -324,7 +323,6 @@ export default function Dropdown() {
 }
 
 
-👉 Mikael, prefere que eu prepare um dropdown animado (com transição suave de abrir/fechar) ou quer deixar ele simples e direto c
 
 
 
