remoção de linhas

--- a/aula10/estados-hover-focus-etc.html
+++ b/aula10/estados-hover-focus-etc.html
@@ -3,8 +3,10 @@
 
 
 Aula: Estados no Tailwind CSS (hover, focus, active e mais
-No Tailwind, qualquer utilitário pode ser aplicado condicionalmente adicionando um prefixo (variant) antes da classe.
-Isso permite mudar estilos conforme o estado do elemento ou do contexto (ex: hover, foco, dark mode, etc).
+No Tailwind, qualquer utilitário pode ser aplicado condicionalmente adicionando 
+um prefixo (variant) antes da classe.
+Isso permite mudar estilos conforme o estado do elemento ou do contexto 
+(ex: hover, foco, dark mode, etc).
 
 
 1. Estados mais comuns (interativos):
