--- a/aula3/espaçamento.html
+++ b/aula3/espaçamento.html
@@ -181,7 +181,8 @@ ml-[<value>]                  margin-left: <value>;
 
 
 🔹 O que é o space-x e space-y?
-. space-x-* → adiciona espaçamento horizontal entre os elementos filhos (deixa “respiro” entre eles na horizontal).
+. space-x-* → adiciona espaçamento horizontal entre os elementos filhos 
+(deixa “respiro” entre eles na horizontal).
 . space-y-* → adiciona espaçamento vertical entre os elementos filhos (respiro na vertical).
 
 ⚠️ Importante:
