--- a/aula7/flexbok.html
+++ b/aula7/flexbok.html
@@ -18,7 +18,8 @@ Isso significa que você deve adicionar flex na div ou no elemento pai:
   <div>Item 2</div>
 </div>
 
-🔑 O flex sozinho transforma o container em flex container, e é a partir daí que você pode usar flex-row, flex-col, justify-..., items-... etc.
+🔑 O flex sozinho transforma o container em flex container, e é a partir 
+daí que você pode usar flex-row, flex-col, justify-..., items-... etc.
 
 
 
