--- a/aula9/responsividade.html
+++ b/aula9/responsividade.html
@@ -2,7 +2,9 @@
 
 Responsividade no Tailwind CSS – Breakpoints:
 O Tailwind usa breakpoints móveis-primeiro (mobile-first).
-Isso significa que, por padrão, os estilos aplicam em todas as telas, e os prefixos responsivos servem para adicionar ou substituir estilos a partir de um tamanho mínimo de tela.
+Isso significa que, por padrão, os estilos aplicam em todas as telas, 
+e os prefixos responsivos servem para adicionar ou substituir estilos 
+a partir de um tamanho mínimo de tela.
 
 
 Breakpoints padrão do Tailwind:
