remoção de linha

--- a/aula8/grid.html
+++ b/aula8/grid.html
@@ -103,7 +103,8 @@ Permite usar variáveis CSS no grid-template-columns.
 
 📌 Grid – grid-column
 
-O prefixo grid-column é usado para controlar como os elementos são dimensionados e posicionados dentro das colunas de um grid layout.
+O prefixo grid-column é usado para controlar como os elementos são dimensionados e 
+posicionados dentro das colunas de um grid layout.
 
 🔹 1. Controle de span (quantas colunas ocupa):
 
