--- a/aula17/componente-input.html
+++ b/aula17/componente-input.html
@@ -49,7 +49,8 @@ Explicação:
 
 
 🔹 Todas as opções para Placeholder no Tailwind:
-O Tailwind permite estilizar o placeholder com praticamente as mesmas utilidades de texto que usamos normalmente, mas sempre prefixando com placeholder:.
+O Tailwind permite estilizar o placeholder com praticamente as mesmas utilidades de 
+texto que usamos normalmente, mas sempre prefixando com placeholder:.
 
 ✅ Cor do placeholder:
 
